--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -464,3 +464,69 @@ body > main > div:nth-child(6) > div:nth-child(4) > div > form > div:nth-child(5
     bottom: 7px;
 }
 
+
+/*SignIn*/
+/*As a customer*/
+body > main > div:nth-child(7) {
+    width: 79vw;
+    height: 150vh;
+    border: 1px solid black;
+    position: relative;
+    left: 145px;
+}
+body > main > div:nth-child(7) > h2 {
+    position: absolute;
+    top: 30px;
+    left: 500px;
+}
+body > main > div:nth-child(7) >div:nth-child(3){
+    background-color: #e6e8e5;
+    position: absolute;
+    width: 950px;
+    height: 720px;
+    left: 130px;
+    top: 72px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form{
+    /*border: 1px solid black;*/
+    position: relative;
+    left: 180px;
+    width: 850px;
+    height: 750px;
+    top: 25px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(1){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 80px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(2){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 100px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(3){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 120px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(4){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 140px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(5){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 160px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(6){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 180px;
+}
+body > main > div:nth-child(7) >div:nth-child(4)>form>div:nth-child(7){
+    /*border: 1px solid red;*/
+    position: relative;
+    top: 200px;
+}
