--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -693,3 +693,41 @@ body > main > div:nth-child(9) > div >main>div:nth-child(1) >div:nth-child(4)>di
     position: relative;
     top: 30px;
 }
+
+
+/*update Reservation status*/
+body > main > div:nth-child(9) > div >main>div:nth-child(2){
+    position: relative;
+    height: 900px;
+    border: 1px solid red;
+}
+body > main > div:nth-child(9) > div >main>div:nth-child(2) >div:nth-child(1)> h2 {
+    position: absolute;
+    top: 60px;
+    left: 420px;
+}
+/*body > main > div:nth-child(9) > div >main>div:nth-child(2) >div:nth-child(1)>div:nth-child(3){*/
+/*    position: absolute;*/
+/*    !*border: 1px solid brown;*!*/
+/*    width: 1050px;*/
+/*    top: 130px;*/
+/*    left: 75px;*/
+/*    height: 755px;*/
+/*    background-color: #e6e8e5;*/
+/*}*/
+body > main > div:nth-child(9) > div >main>div:nth-child(2) >div:nth-child(1)>div:nth-child(4)>div:nth-child(1)>div:nth-child(1){
+    position: relative;
+    border: 1px solid purple;
+    width: 1000px;
+    top: 100px;
+    left: 100px;
+    height: 580px;
+}
+body > main > div:nth-child(9) > div >main>div:nth-child(2) >div:nth-child(1)>div:nth-child(4)>div:nth-child(1)>div:nth-child(2){
+    position: relative;
+    border: 1px solid darkgreen;
+    width: 1000px;
+    top: 100px;
+    left: 100px;
+    height: 700px;
+}
